# teams2tasks

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  Untitled-3.ipynb  llms.txt  main.py  pyproject.toml  run_inference.py  run_inference_specific.py
docs/: anytype-task-importer-template.md  architecture.md
src/inference/: engine.py
src/inference/models/: task.py
src/scraper/: __init__.py  cli.py  config.py
src/scraper/commands/: config.py  infer.py  scrape.py
src/scraper/core/: models.py  scraper.py
