[project]
name = "scrape-teams-chats"
version = "0.2.0"
description = "Deterministic Teams Scraper with Mode Support"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic-settings>=2.2.0",
    "pydantic>=2.7.0",
    "playwright>=1.42.0",
    "loguru>=0.7.2",
    "beautifulsoup4>=4.12.0",
    "dspy-ai>=3.1.3",
    "plotly>=6.6.0",
    "pandas>=3.0.1",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN", "S", "D"]

[tool.mypy]
strict = true
ignore_missing_imports = true
